--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "server": "nodemon index.js"
+    "server": "nodemon index.js",
+    "start": "node index.js"
   },
   "repository": "https://github.com/LambdaSchool/webdb-i-challenge",
   "dependencies": {
+    "3": "^2.1.0",
     "express": "^4.17.1",
-    "knex": "^0.20.1",
+    "knex": "^0.20.10",
+    "sqlite": "^3.0.3",
     "sqlite3": "^4.1.0"
   },
   "devDependencies": {
